# buddy-mlir

examples/ConvOpt/: conv2d-cb-masked.mlir  conv2d-cb-stripmining.mlir  edge-detection-compare.cpp  makefile
examples/DLModel/: CMakeLists.txt  ResNet18DefaultBenchmark.cpp  riscv-toolchain.cmake
examples/MLIRTransform/: makefile  transform-batch-matmul-vectorize.mlir  transform-conv2d-im2col-vectorize.mlir  transform-linalg-generic-vectorize.mlir
examples/RVVExperimentI32/: axpy-masked.mlir  axpy-stripmining.mlir  conv-masked.mlir  conv-naive.mlir  matmul-naive.mlir  matmul-stripmining.mlir  matmul-unroll.mlir  rvv-c-matmul.c
examples/SIMDExperiment/: batch-matmul-contract.mlir  conv2d-nchw-fchw-im2col.mlir  conv2d-nchw-fchw-vectorize-16.mlir  makefile  matmul-contract.mlir  matmul-vectorize-16.mlir  test.mlir  winagrad-F23-conv-in-it.mlir  winagrad-F23.mlir  winagrad-F63-no-pad.mlir  winagrad-F63.mlir
